--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -105,7 +105,10 @@ hr.star-primary:after {
 }
 
 @media (max-width: 700px) {
-  
+    body{
+      height: 600px;
+      width: 400px;
+    }
   .dp{
     width: 25%;
   }
