--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -62,6 +62,9 @@ p{
 .st{
   font-size: 1.2rem;
 }
+.self{
+  font-size: 1.2rem;
+}
 hr {
     margin: 15px auto 25px;
     padding: 0;
@@ -105,7 +108,7 @@ hr.star-primary:after {
 }
 
 @media (max-width: 700px) {
-    
+
   .dp{
     width: 25%;
   }
@@ -127,5 +130,13 @@ hr.star-primary:after {
   }
   .navbar-toggler{
     font-size: 1rem;
+  }
+  .self{
+    font-size: 1.2rem;
+  }
+  .st{
+    text-align: justify;
+    line-height: 1.5;
+
   }
 }
